<resources>    <string name="app_name">Real Estate</string>    <string name="about_app">        <br> This application helps</br>        <br> to search for estate  </br>    </string>    <string name="hint_phone">Phone</string>    <string name="hint_password">Password</string>    <string name="sign_in">Sing In</string>    <string name="create_account">Create Account</string>    <string name="forget_password">Foget Password ?</string>    <string name="sale">Sale</string>    <string name="leasing">Leasing</string>    <string name="montgage">Montgage</string>    <string name="swap">Swap</string>    <string name="space">Space</string>    <string name="price">Price</string>    <string name="save">Save</string>    <string name="share">Share</string>    <string name="my_estate">My Estate</string>    <string name="add_estate">Add Estate</string>    <string name="name">Name</string>    <string name="office">Office</string>    <string name="sing_up">Sing Up</string>    <string name="add_type_estate">Add Type Estate</string>    <string name="hint_type_estate">Type Estate</string>    <string name="home">Home</string>    <string name="profile">Profile</string>    <string name="number">Number</string>    <string name="arabic">Arabic</string>    <string name="english">English</string>    <string name="langauge">Langauge</string>    <string name="delete">Delete</string>    <string name="update">Update</string>    <string name="location">Location</string></resources>