<?xml version="1.0" encoding="utf-8"?><navigation xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/mobile_navigation"    app:startDestination="@+id/navigation_home">    <fragment        android:id="@+id/navigation_home"        android:name="com.example.realestate.view.fragment.HomeFragment"        android:label="@string/home"        tools:layout="@layout/fragment_home" />    <fragment        android:id="@+id/navigation_explor"        android:name="com.example.realestate.view.fragment.ExplorFragment"        android:label="@string/my_estate"        tools:layout="@layout/fragment_explor" />    <fragment        android:id="@+id/navigation_profile"        android:name="com.example.realestate.view.fragment.ProfileFragment"        android:label="@string/profile"        tools:layout="@layout/fragment_profile" /></navigation>