<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/layoutSingIn"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".view.activity.MainActivity">    <ImageView        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_alignParentStart="true"        android:layout_alignParentTop="true"        android:layout_marginStart="0dp"        android:layout_marginTop="0dp"        android:background="@drawable/backround"        android:scaleType="centerCrop" />    <ImageView        android:id="@+id/imgIconApp"        android:layout_width="200dp"        android:layout_height="200dp"        android:layout_centerHorizontal="true"        android:layout_marginTop="60dp"        android:layout_marginBottom="25dp"        android:src="@drawable/iconapp" />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_below="@id/imgIconApp"        android:layout_alignParentStart="true"        android:layout_marginTop="52dp"        android:orientation="vertical">        <EditText            android:id="@+id/edtPhoneNumber"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:background="@drawable/bac_editetext_boder"            android:drawableStart="@drawable/cutstom_phone"            android:drawablePadding="5dp"            android:elevation="8dp"            android:fontFamily="@font/roboto_regular"            android:hint="@string/hint_phone"            android:inputType="number"            android:padding="10dp" />        <EditText            android:id="@+id/edtpassword"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:background="@drawable/bac_editetext_boder"            android:drawableStart="@drawable/custom_password"            android:drawablePadding="5dp"            android:elevation="8dp"            android:fontFamily="@font/roboto_regular"            android:hint="@string/hint_password"            android:inputType="textWebPassword"            android:padding="10dp" />        <TextView            android:id="@+id/txtForgetPasword"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@+id/edtpassword"            android:layout_marginStart="32dp"            android:fontFamily="@font/roboto_regular"            android:text="@string/forget_password"            android:textColor="@color/colorAccent"            android:textSize="15sp" />        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton            android:id="@+id/btnSingIn"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_below="@+id/txtForgetPasword"            android:layout_gravity="center_horizontal"            android:layout_marginStart="22dp"            android:layout_marginTop="36dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="8dp"            android:background="@drawable/bac_button_sin_in"            android:elevation="16dp"            android:fontFamily="@font/roboto_regular"            android:text="@string/sign_in"            android:textAllCaps="false"            android:textColor="@android:color/white"            app:spinning_bar_color="#FFF"            app:spinning_bar_padding="6dp"            app:spinning_bar_width="4dp" />    </LinearLayout>    <TextView        android:id="@+id/txtCreateAcount"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:layout_centerHorizontal="true"        android:layout_marginBottom="22dp"        android:fontFamily="@font/roboto_regular"        android:text="@string/create_account"        android:textColor="@color/colorPrimary"        android:textSize="20dp" /></RelativeLayout>