<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:background="@color/background"    android:padding="10dp">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical">        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_gravity="center_horizontal"            android:fontFamily="@font/roboto_medium"            android:text="@string/add_type_estate"            android:textColor="@color/colorAccent"            android:textSize="30dp" />        <EditText            android:id="@+id/edtBottomSheetTypeEstateName"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:background="@drawable/bac_editetext_boder"            android:drawableStart="@drawable/ic_phone"            android:elevation="8dp"            android:fontFamily="@font/roboto_regular"            android:hint="@string/hint_type_estate"            android:inputType="text"            android:padding="10dp" />        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton            android:id="@+id/btnBottomSheetTypeEstateSave"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_gravity="center_horizontal"            android:layout_marginStart="22dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="8dp"            android:background="@drawable/bac_button_sin_in"            android:elevation="16dp"            android:fontFamily="@font/roboto_regular"            android:text="@string/save"            android:textAllCaps="false"            android:textColor="@android:color/white"            app:spinning_bar_color="#FFF"            app:spinning_bar_padding="6dp"            app:spinning_bar_width="4dp" />    </LinearLayout></RelativeLayout>