<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:background="@color/background"    android:padding="10dp">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="20dp"        android:layout_marginBottom="10dp"        android:orientation="vertical">        <RelativeLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_centerInParent="true"                android:layout_centerVertical="true"                android:fontFamily="@font/roboto_medium"                android:text="@string/create_account"                android:textColor="@color/colorAccent"                android:textSize="30dp" />            <ImageView                android:id="@+id/btnBottomSheetCreateOfficeGallary"                android:layout_width="32dp"                android:layout_height="32dp"                android:layout_alignParentEnd="true"                android:layout_centerVertical="true"                android:src="@drawable/ic_camera" />        </RelativeLayout>        <EditText            android:id="@+id/edtBottomSheetName"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:background="@drawable/bac_editetext_boder"            android:drawableStart="@drawable/custom_name"            android:drawablePadding="5dp"            android:elevation="8dp"            android:fontFamily="@font/roboto_regular"            android:hint="@string/name"            android:inputType="text"            android:padding="10dp" />        <EditText            android:id="@+id/edtBottomSheetPhoneNumber"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:background="@drawable/bac_editetext_boder"            android:drawableStart="@drawable/cutstom_phone"            android:drawablePadding="5dp"            android:elevation="8dp"            android:fontFamily="@font/roboto_regular"            android:hint="@string/hint_phone"            android:inputType="number"            android:padding="10dp" />        <EditText            android:id="@+id/edtBottomSheetPassword"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:background="@drawable/bac_editetext_boder"            android:drawableStart="@drawable/custom_password"            android:drawablePadding="5dp"            android:elevation="8dp"            android:fontFamily="@font/roboto_regular"            android:hint="@string/hint_password"            android:inputType="textWebPassword"            android:padding="10dp" />        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton            android:id="@+id/btnBottomSheetSingUp"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_gravity="center_horizontal"            android:layout_marginStart="22dp"            android:layout_marginTop="22dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="8dp"            android:background="@drawable/bac_button_sin_in"            android:elevation="16dp"            android:fontFamily="@font/roboto_regular"            android:text="@string/sing_up"            android:textAllCaps="false"            android:textColor="@android:color/white"            app:spinning_bar_color="#FFF"            app:spinning_bar_padding="6dp"            app:spinning_bar_width="4dp" />    </LinearLayout></LinearLayout>