<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:background="@color/background">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginTop="20dp"        android:layout_marginBottom="10dp"        android:orientation="vertical">        <RelativeLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_centerInParent="true"                android:layout_centerVertical="true"                android:fontFamily="@font/roboto_medium"                android:text="@string/add_estate"                android:textColor="@color/colorAccent"                android:textSize="30dp" />            <ImageView                android:id="@+id/btnBottomSheetEstateGallary"                android:layout_width="32dp"                android:layout_height="32dp"                android:layout_alignParentEnd="true"                android:layout_centerVertical="true"                android:src="@drawable/ic_camera" />        </RelativeLayout>        <org.angmarch.views.NiceSpinner            android:id="@+id/spinnerBootomSheetEstate"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:elevation="8dp"            android:hint="Location"/>        <EditText            android:id="@+id/edtBottomSheetEstateSpace"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:background="@drawable/bac_editetext_boder"            android:drawableStart="@drawable/custom_space"            android:drawablePadding="5dp"            android:elevation="8dp"            android:fontFamily="@font/roboto_regular"            android:hint="@string/space"            android:inputType="number"            android:padding="10dp" />        <EditText            android:id="@+id/edtBottomSheetEstatePrice"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="22dp"            android:layout_marginTop="14dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="14dp"            android:background="@drawable/bac_editetext_boder"            android:drawableStart="@drawable/custom_price"            android:drawablePadding="5dp"            android:elevation="8dp"            android:fontFamily="@font/roboto_regular"            android:hint="@string/price"            android:inputType="number"            android:padding="10dp" />        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton            android:id="@+id/btnBottomSheetEstateSave"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_gravity="end"            android:layout_marginStart="22dp"            android:layout_marginTop="22dp"            android:layout_marginEnd="22dp"            android:layout_marginBottom="8dp"            android:background="@drawable/bac_button_sin_in"            android:elevation="16dp"            android:fontFamily="@font/roboto_regular"            android:text="@string/save"            android:textAllCaps="false"            android:textColor="@android:color/white"            app:spinning_bar_color="#FFF"            app:spinning_bar_padding="6dp"            app:spinning_bar_width="4dp" />    </LinearLayout></RelativeLayout>