<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/background"    tools:context=".view.fragment.ProfileFragment">    <RelativeLayout        android:id="@+id/relativeAbove"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_margin="5dp"        android:layout_marginTop="10dp"        android:orientation="horizontal">        <ImageButton            android:id="@+id/btnBackToOpartionFragProfile"            android:layout_width="34dp"            android:layout_height="34dp"            android:layout_centerVertical="true"            android:layout_marginHorizontal="5dp"            android:background="@drawable/ic_back" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerVertical="true"            android:layout_toEndOf="@+id/btnBackToOpartionFragProfile"            android:fontFamily="@font/roboto_medium"            android:text="Profile"            android:textColor="@color/colorAccent"            android:textSize="20sp" />    </RelativeLayout>    <de.hdodenhof.circleimageview.CircleImageView        android:id="@+id/imgProfileFragmentProfile"        android:layout_width="150dp"        android:layout_height="150dp"        android:layout_below="@+id/relativeAbove"        android:layout_centerHorizontal="true"        android:layout_marginTop="20dp"        android:scaleType="centerCrop"        android:src="@drawable/person" />    <RelativeLayout        android:id="@+id/rel1"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_below="@+id/imgProfileFragmentProfile"        android:layout_marginTop="30dp">        <ImageView            android:id="@+id/imgIconAccount"            android:layout_width="35dp"            android:layout_height="35dp"            android:layout_marginStart="10dp"            android:layout_marginEnd="20dp"            android:src="@drawable/ic_account" />        <TextView            android:id="@+id/txtNameAccount"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_toEndOf="@+id/imgIconAccount"            android:fontFamily="@font/roboto_regular"            android:text="@string/name"            android:textColor="@color/colorPrimaryDark"            android:textSize="14sp" />        <TextView            android:id="@+id/txtNameAccountFragmentProfile"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@+id/txtNameAccount"            android:layout_toEndOf="@+id/imgIconAccount"            android:fontFamily="@font/roboto_regular"            android:text="Mohoammad"            android:textColor="@color/colorAccent"            android:textSize="18sp" />        <View            android:layout_width="match_parent"            android:layout_height="2dp"            android:layout_below="@id/txtNameAccountFragmentProfile"            android:layout_marginStart="30dp"            android:layout_marginTop="25dp"            android:layout_marginEnd="25dp"            android:background="@color/colorPrimaryDark" />    </RelativeLayout>    <RelativeLayout        android:id="@+id/rel2"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_below="@+id/rel1"        android:layout_marginTop="25dp">        <ImageView            android:id="@+id/imgIconPhone"            android:layout_width="35dp"            android:layout_height="35dp"            android:layout_marginStart="10dp"            android:layout_marginEnd="20dp"            android:src="@drawable/ic_call" />        <TextView            android:id="@+id/txtNumberAccount"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_toEndOf="@+id/imgIconPhone"            android:fontFamily="@font/roboto_regular"            android:text="@string/number"            android:textColor="@color/colorPrimaryDark"            android:textSize="14sp" />        <TextView            android:id="@+id/txtNumberAccountFragmentProfile"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@+id/txtNumberAccount"            android:layout_toEndOf="@+id/imgIconPhone"            android:fontFamily="@font/roboto_regular"            android:text="0940741908"            android:textColor="@color/colorAccent"            android:textSize="18sp" />        <View            android:layout_width="match_parent"            android:layout_height="2dp"            android:layout_below="@id/txtNumberAccountFragmentProfile"            android:layout_marginStart="30dp"            android:layout_marginTop="25dp"            android:layout_marginEnd="25dp"            android:background="@color/colorPrimaryDark" />    </RelativeLayout>    <RelativeLayout        android:id="@+id/rel3"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_below="@+id/rel2"        android:layout_marginTop="25dp">        <ImageView            android:id="@+id/imgIconLanguage"            android:layout_width="35dp"            android:layout_height="35dp"            android:layout_marginStart="10dp"            android:layout_marginEnd="20dp"            android:src="@drawable/ic_langauge" />        <TextView            android:id="@+id/txtLanguageAccount"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_toEndOf="@+id/imgIconLanguage"            android:fontFamily="@font/roboto_regular"            android:text="@string/langauge"            android:textColor="@color/colorPrimaryDark"            android:textSize="14sp" />        <RadioGroup            android:id="@+id/radioGroupArEn"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_below="@+id/txtLanguageAccount"            android:layout_toEndOf="@+id/imgIconLanguage"            android:orientation="horizontal">            <RadioButton                android:id="@+id/radioButtonEnglish"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/english"                android:textIsSelectable="true"                android:textSize="18sp" />            <RadioButton                android:id="@+id/radioButtonArabic"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginStart="20sp"                android:text="@string/arabic"                android:textSize="18sp" />        </RadioGroup>    </RelativeLayout></RelativeLayout>