<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".view.activity.OprationActivity">    <ImageView        android:layout_width="match_parent"        android:layout_height="match_parent"        android:scaleType="centerCrop"        android:src="@drawable/backround" />    <RelativeLayout        android:id="@+id/relativeAbove"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_margin="5dp"        android:layout_marginTop="10dp"        android:orientation="horizontal">        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerVertical="true"            android:layout_marginStart="5dp"            android:fontFamily="@font/roboto_medium"            android:text="Chose Type"            android:textColor="@color/colorAccent"            android:textSize="24dp" />        <ImageView            android:layout_width="36dp"            android:layout_height="36dp"            android:layout_alignParentEnd="true"            android:layout_centerVertical="true"            android:src="@drawable/ic_user" />    </RelativeLayout>    <ImageView        android:id="@+id/imgIconApp"        android:layout_width="200dp"        android:layout_height="200dp"        android:layout_below="@+id/relativeAbove"        android:layout_centerHorizontal="true"        android:layout_marginTop="15dp"        android:layout_marginBottom="15dp"        android:src="@drawable/iconapp" />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:layout_marginStart="5dp"        android:layout_marginTop="10dp"        android:layout_marginEnd="5dp"        android:layout_marginBottom="10dp"        android:orientation="vertical">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:orientation="horizontal">            <androidx.cardview.widget.CardView                android:id="@+id/cardLeasing"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_margin="5dp"                android:layout_weight="1"                android:clickable="true"                android:elevation="10dp"                android:focusable="true"                android:foreground="?attr/selectableItemBackground"                app:cardCornerRadius="10dp">                <RelativeLayout                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:background="@color/cardLeasing">                    <ImageView                        android:id="@+id/imgLeasing"                        android:layout_width="100dp"                        android:layout_height="150dp"                        android:layout_centerHorizontal="true"                        android:src="@drawable/ic_leasing" />                    <TextView                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_below="@+id/imgLeasing"                        android:layout_centerHorizontal="true"                        android:fontFamily="@font/roboto_regular"                        android:text="@string/leasing"                        android:textColor="#fff"                        android:textSize="20sp" />                </RelativeLayout>            </androidx.cardview.widget.CardView>            <androidx.cardview.widget.CardView                android:id="@+id/cardSale"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_margin="5dp"                android:layout_weight="1"                android:clickable="true"                android:elevation="10dp"                android:focusable="true"                android:foreground="?attr/selectableItemBackground"                app:cardCornerRadius="10dp">                <RelativeLayout                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:background="@color/colorPrimary">                    <ImageView                        android:id="@+id/imgSale"                        android:layout_width="100dp"                        android:layout_height="150dp"                        android:layout_centerHorizontal="true"                        android:src="@drawable/ic_sale" />                    <TextView                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_below="@+id/imgSale"                        android:layout_centerHorizontal="true"                        android:fontFamily="@font/roboto_regular"                        android:text="@string/sale"                        android:textColor="#fff"                        android:textSize="20sp" />                </RelativeLayout>            </androidx.cardview.widget.CardView>        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="0dp"            android:layout_weight="1"            android:orientation="horizontal">            <androidx.cardview.widget.CardView                android:id="@+id/cardMortgage"                android:layout_width="0dp"                android:layout_height="wrap_content"                android:layout_margin="5dp"                android:layout_weight="1"                android:clickable="true"                android:elevation="10dp"                android:focusable="true"                android:foreground="?attr/selectableItemBackground"                app:cardCornerRadius="10dp">                <RelativeLayout                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:background="@color/cardMortgage">                    <ImageView                        android:id="@+id/imgMontgage"                        android:layout_width="100dp"                        android:layout_height="150dp"                        android:layout_centerHorizontal="true"                        android:src="@drawable/ic_mortgage" />                    <TextView                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_below="@+id/imgMontgage"                        android:layout_centerHorizontal="true"                        android:fontFamily="@font/roboto_regular"                        android:text="@string/montgage"                        android:textColor="#fff"                        android:textSize="20sp" />                </RelativeLayout>            </androidx.cardview.widget.CardView>            <androidx.cardview.widget.CardView                android:id="@+id/cardSwap"                android:layout_width="0dp"                android:layout_height="match_parent"                android:layout_margin="5dp"                android:layout_weight="1"                android:clickable="true"                android:elevation="10dp"                android:focusable="true"                android:foreground="?attr/selectableItemBackground"                app:cardCornerRadius="10dp">                <RelativeLayout                    android:layout_width="match_parent"                    android:layout_height="match_parent"                    android:background="@color/cardSwap">                    <ImageView                        android:id="@+id/imgSwap"                        android:layout_width="100dp"                        android:layout_height="150dp"                        android:layout_centerHorizontal="true"                        android:src="@drawable/ic_swap" />                    <TextView                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_below="@+id/imgSwap"                        android:layout_centerHorizontal="true"                        android:fontFamily="@font/roboto_regular"                        android:text="@string/swap"                        android:textColor="#fff"                        android:textSize="20sp" />                </RelativeLayout>            </androidx.cardview.widget.CardView>        </LinearLayout>    </LinearLayout></RelativeLayout>